Adding in integration changes

--- a/about/about.html
+++ b/about/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/about/styles/about.css">
-    <link rel="stylesheet" href="/common/styles/common.css">
+    <link rel="stylesheet" href="./styles/about.css">
+    <link rel="stylesheet" href="../common/styles/common.css">
 
     <title>About Us</title>
 </head>
@@ -37,7 +37,7 @@
     <section class="shrink-body">
         <section class="grow-up-section">
             <section class="m-top-2 m-bottom-4">
-                <img src="/about/Images/tutor.jpg">
+                <img src="../about/Images/tutor.jpg">
             </section>
             <section class="width-fifty">
                 <h2>Grow up Your Knowledge Curve</h2>
@@ -72,7 +72,7 @@
 
 
             <section class="goal-section-image">
-                <img src="/about/Images/our-goal-image.png">
+                <img src="../about/Images/our-goal-image.png">
             </section>
         </section>
 
@@ -90,23 +90,23 @@
             <br>
             <section class="our-member-section-profiles">
                 <div>
-                    <img src="/about/Images/Sandeep.jpeg" alt="">
+                    <img src="../about/Images/Sandeep.jpeg" alt="">
                     <p>Sandeep Das</p>
                     <p class="member-designation">Back-End SME</p>
                 </div>
                 <div>
-                    <img src="/about/Images/Einstein.jpeg" alt="">
+                    <img src="../about/Images/Einstein.jpeg" alt="">
                     <p>Swapnil Roy Chowdhury</p>
                     <p class="member-designation">Front-End SME</p>
 
                 </div>
                 <div>
-                    <img src="/about/Images/bill.jpg" alt="">
+                    <img src="../about/Images/bill.jpg" alt="">
                     <p>Priya Mary Joseph</p>
                     <p class="member-designation">DB SME</p>
                 </div>
                 <div>
-                    <img src="/about/Images/sundar.jpg" alt="">
+                    <img src="../about/Images/sundar.jpg" alt="">
                     <p>Nithya</p>
                     <p class="member-designation">GURU SME</p>
 
@@ -121,7 +121,7 @@
 
         <section class="hiring-section">
             <section class="width-fifty">
-                <img src="/about/Images/HiringGif.gif">
+                <img src="../about/Images/HiringGif.gif">
             </section>
             <section class="width-fifty">
                 <h1>We're Hiring!</h1>
