--- a/learning/learning.html
+++ b/learning/learning.html
@@ -35,12 +35,40 @@
                 <h3>Live comments:</h3>
                 <hr/>
                 <ul class="list-style-none pad-none">
-                    <li>
+                    <li class="mbtm-3">
                         <b>Swapnil: </b>
                         <small>Good Morning</small>
                     </li>
+                    <li class="mbtm-3">
+                        <b>Sandeep: </b>
+                        <small>Good Morning, Sir</small>
+                    </li>
+                    <li class="mbtm-3">
+                        <b>Priya: </b>
+                        <small>Good Morning</small>
+                    </li>
+                    <li class="mbtm-3">
+                        <b>John(Instructor): </b>
+                        <small>Good Morning, How are you guys doing?</small>
+                    </li>
+                    <li class="mbtm-3">
+                        <b>Sandeep: </b>
+                        <small>Good. But its too cold out here</small>
+                    </li>
+                    <li class="mbtm-3">
+                        <b>Swapnil: </b>
+                        <small>Yeah.</small>
+                    </li>
+                    <li class="mbtm-3">
+                        <b>Priya: </b>
+                        <small>I am doing good. Thanks for asking.</small>
+                    </li>
                 </ul>
             </div>
+        </section>
+        <section class="main-container-fluid display-flex pad-3">
+            <h3>Description</h3>
+            <p></p>
         </section>
     </main>
     <!-- Footer goes here -->
