--- a/teacher/teacher.html
+++ b/teacher/teacher.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teachers Dashboard</title>
-    <link rel = "stylesheet" href="/teacher/styles/teacher.css">
-    <link rel = "stylesheet" href = "/teacher/styles/animated.css">
-    <link rel = "stylesheet" href = "/common/styles/common.css">
+    <link rel = "stylesheet" href="../teacher/styles/teacher.css">
+    <link rel = "stylesheet" href = "../teacher/styles/animated.css">
+    <link rel = "stylesheet" href = "../common/styles/common.css">
 <body>
 
     <!-- Header/Nav starts here -->
@@ -42,7 +42,7 @@
                     <p>Progress is <span class = "txt-orange">very good!</span></p>
                 </section>
                 <section>
-                    <img  style ="max-width:90%;"src = "/teacher/Images/online-library-2769744-2302762.png">
+                    <img  style ="max-width:90%;"src = "../teacher/Images/online-library-2769744-2302762.png">
                 </section>
             </section>
             
@@ -54,7 +54,7 @@
                     <h3 class = "align-center">My students</h3>
                     <ul>
                         <li class = "display-flex">
-                            <img class = "avatar" src="/teacher/Images/avatar.jpg">
+                            <img class = "avatar" src="../teacher/Images/avatar.jpg">
                             <p>Amelia Collier<t></t></p>
                             <div class="progress"> 
                                 <div class="progress__bar"></div>
@@ -62,7 +62,7 @@
                             <p>80%</p>
                         </li>
                         <li class = "display-flex">
-                            <img class = "avatar" src="/teacher/Images/avatar.jpg">
+                            <img class = "avatar" src="../teacher/Images/avatar.jpg">
                             <p>Estelle Baldwin</p>
                             <div class="progress"> 
                                 <div class="progress__bar"></div>
@@ -70,7 +70,7 @@
                             <p>80%</p>
                         </li>
                         <li class = "display-flex">
-                            <img class = "avatar" src="/teacher/Images/avatar.jpg">
+                            <img class = "avatar" src="../teacher/Images/avatar.jpg">
                             <p>Michael Watts</p>
                             <div class="progress"> 
                                 <div class="progress__bar"></div>
@@ -78,7 +78,7 @@
                             <p>80%</p>
                         </li>
                         <li class = "display-flex">
-                            <img class = "avatar" src="/teacher/Images/avatar.jpg">
+                            <img class = "avatar" src="../teacher/Images/avatar.jpg">
                             <p>Joe Woods</p>
                             <div class="progress"> 
                                 <div class="progress__bar"></div>
