Adding in learning demo update

--- a/home/home.html
+++ b/home/home.html
@@ -19,7 +19,7 @@
                     <li><a href="../home/home.html" class = "li-myButton">Home</a></li>
                     <li><a href="../about/about.html" class = "li-myButton">About us</a></li>
                     <li><a href="../products/products.html" class = "li-myButton">Products</a></li>
-                    <li><a href="../learning/learning.html" class = "li-myButton">Demo learning</a></li>
+                    <li><a href="../learning/learning.html" class = "li-myButton">Sample learning</a></li>
                     <li> <a href="../contact/contact.html" class = "li-myButton">Contact</a></li>
                 </ul>
             </nav>
