--- a/faq/faq.html
+++ b/faq/faq.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../common/styles/common.css" />
     <link rel="stylesheet" href="styles/faq.css" />
+    <script src="./scripts/faq.js"></script>
 </head>
 
 <body>
