--- a/learning/learning.html
+++ b/learning/learning.html
@@ -27,7 +27,7 @@
     </header>   
     <!-- Header/Nav ends here -->
     <main class="main-body">
-        <section class="main-container-fluid display-flex vert-flex-center space-apart mob-flex-dir-col-rev  mbtm-8 sign-in-container" id="log-in">
+        <section class="main-container-fluid display-flex vert-flex-center space-apart mob-flex-dir-col mob-sec-pad sign-in-container" id="log-in">
             <div class="width-70 mob-width-100 pad-3 right-border">
                 <iframe class="width-100 video-frame" src="https://www.youtube.com/embed/3dHNOWTI7H8?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
@@ -66,9 +66,9 @@
                 </ul>
             </div>
         </section>
-        <section class="main-container-fluid display-flex pad-3">
-            <h3>Description</h3>
-            <p></p>
+        <section class="main-container-fluid pad-3 mob-sec-pad">
+            <h3 class="margin-0">Description</h3>
+            <p>Angular is javascript framework for building single page application. In this video we will learn Angular plus we will learn how to follow documentation to learn more about Angular.</p>
         </section>
     </main>
     <!-- Footer goes here -->
