Adding in learning demo update

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href = "/contact/styles/contact.css">
-    <link rel = "stylesheet" href = "/common/styles/common.css">
+    <link rel="stylesheet" href = "../contact/styles/contact.css">
+    <link rel = "stylesheet" href = "../common/styles/common.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                     <li><a href="../home/home.html" class = "li-myButton">Home</a></li>
                     <li><a href="../about/about.html" class = "li-myButton">About us</a></li>
                     <li><a href="../products/products.html" class = "li-myButton">Products</a></li>
-                    <li><a href="../learning/learning.html" class = "li-myButton">Demo learning</a></li>
+                    <li><a href="../learning/learning.html" class = "li-myButton">Sample learning</a></li>
                     <li> <a href="../contact/contact.html" class = "li-myButton">Contact</a></li>
                 </ul>
             </nav>
@@ -31,7 +31,7 @@
     <section class = "box-content m-top-2">
         <section class = "main-section">
             <section class = "width-fifty section-banner">
-                <img src = "/contact/Images/contact_us.png">
+                <img src = "../contact/Images/contact_us.png">
             </section>
     
     
