--- a/home/home.html
+++ b/home/home.html
@@ -47,7 +47,7 @@
             <div class="mob-sec-pad">
                 <h1 class="main-container mbtm-3">Learn at your own pace with experienced people from the industry. Collaborate for new ideas and let your dream come true.</h1>
                 <p class="main-container">We have catered to numerous people with their learning path. Be it a hobby or your profession, our experts will ensure that you grab each and every concept and able to deliver your capabilities to the maximum possible heights. </p>
-                <div class="main-container button-container display-flex mob-hor-flex-center"><a href="" class="main-button button-blue anchor-style ">Get started for free</a></div>
+                <div class="main-container button-container display-flex mob-hor-flex-center"><a href="" class="main-button button-blue anchor-style mob-width-100">Get started for free</a></div>
             </div>
         </article>
         <section class="test-section mob-sec-pad">
@@ -116,7 +116,7 @@
                     <h1>Want to become an instructor? <span class="blue-text">Join Us.</span></h1>
                     <img src="./svg/online-collab.svg" alt="Become an instructor" class="width-100 mob-display"/>
                     <p>Over 100+ instructors are currently teaching 1500+ students through our platform. We provide all the necessary tools and equipments required for a holistic learning environment in which a student as well as a teacher can flourish unconditionally.</p>
-                    <div class="main-container button-container display-flex"><a href="" class="main-button button-palm anchor-style ">Start teaching today</a></div>
+                    <div class="main-container button-container display-flex"><a href="" class="main-button button-palm anchor-style mob-width-100">Start teaching today</a></div>
                 </div>
                 
             </div>
