--- a/learning/learning.html
+++ b/learning/learning.html
@@ -17,14 +17,16 @@
             <nav class="main-nav">
                 <ul class="main-nav-list">
                     <li><a href="../home/home.html" class = "li-myButton">Home</a></li>
-                    <li><a href="#" class = "li-myButton">About us</a></li>
-                    <li><a href="#" class = "li-myButton">Our clients</a></li>
-                    <li> <a href="#" class = "li-myButton">Contact</a></li>
+                    <li><a href="../about/about.html" class = "li-myButton">About us</a></li>
+                    <li><a href="../products/products.html" class = "li-myButton">Products</a></li>
+                    <li><a href="../learning/learning.html" class = "li-myButton">Sample learning</a></li>
+                    <li> <a href="../faq/faq.html" class = "li-myButton">FAQs</a></li>
+                    <li> <a href="../contact/contact.html" class = "li-myButton">Contact</a></li>
                 </ul>
             </nav>
             <a href="../authentication/authentication.html" class = "main-button button-blue anchor-style">Sign Up/ Login</a>
         </div>
-    </header>   
+    </header>  
     <!-- Header/Nav ends here -->
     <main class="main-body">
         <section class="main-container-fluid display-flex vert-flex-center space-apart mob-flex-dir-col mob-sec-pad sign-in-container" id="log-in">
