faq script file

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -36,13 +36,13 @@
     <main class="main-body">
         <section class="mob-sec-pad">
             <div class="main-container">
-                <!-- <div class="form-container">
+                <div class="form-container">
                     <form id="form">
                         <input id="searchbar" type="search" class="input" placeholder="Search..." aria-label="Search through FAQs" />
                         <button id="search" class="search-faq">search</button>
                         <button id="clear" class="clear-results">clear</button>
                     </form>
-                </div> -->
+                </div>
                 <ul>
                     <li>
                         <p class="faq ">How do I register?</p>
@@ -146,8 +146,8 @@
             <p class="white-text margin-0 pad-1 ">© 2021 Copyright : Bullian Inc.</p>
         </section>
     </footer>
-    <!-- <script src="scripts/faq.js ">
-    </script> -->
+    <script src="scripts/faq.js ">
+    </script>
 </body>
 
 </html>
