Adding faq search functionality

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -39,8 +39,8 @@
                 <div class="form-container">
                     <form id="form">
                         <input id="searchbar" type="search" class="input" placeholder="Search..." aria-label="Search through FAQs" />
-                        <button id="search" class="search-faq">search</button>
-                        <button id="clear" class="clear-results">clear</button>
+                        <button id="search" class="search-faq" onclick=searchFaq(event)>search</button>
+                        <button class="clear-results">clear</button>
                     </form>
                 </div>
                 <ul>
@@ -146,8 +146,6 @@
             <p class="white-text margin-0 pad-1 ">© 2021 Copyright : Bullian Inc.</p>
         </section>
     </footer>
-    <script src="scripts/faq.js ">
-    </script>
 </body>
 
 </html>
