changes for faq and products page

--- a/products/products.html
+++ b/products/products.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../common/styles/common.css" />
     <link rel="stylesheet" href="styles/products.css" />
+    <script src="scripts/courses.js"></script>
 </head>
 
 <body>
@@ -19,9 +20,11 @@
             <nav class="main-nav">
                 <ul class="main-nav-list">
                     <li><a href="../home/home.html" class="li-myButton">Home</a></li>
-                    <li><a href="#" class="li-myButton">About us</a></li>
-                    <li><a href="#" class="li-myButton">Our clients</a></li>
-                    <li> <a href="#" class="li-myButton">Contact</a></li>
+                    <li><a href="../about/about.html" class="li-myButton">About us</a></li>
+                    <li><a href="../products/products.html" class="li-myButton">Products</a></li>
+                    <li><a href="../learning/learning.html" class="li-myButton">Sample learning</a></li>
+                    <li> <a href="../faq/faq.html" class="li-myButton">FAQs</a></li>
+                    <li> <a href="../contact/contact.html" class="li-myButton">Contact</a></li>
                 </ul>
             </nav>
             <a href="../authentication/authentication.html" class="main-button button-blue anchor-style">Sign Up/ Login</a>
@@ -35,55 +38,7 @@
     </header>
     <main class="products-body">
         <section class="mob-sec-pad">
-            <div class="main-container">
-                <div class="display-flex mob-flex-dir-col space-apart mbtm-3">
-                    <div class="products-card">
-                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 sub_heading_text">Math</h3>
-                            <p class="mbtm-8 content-font">Choose from a wide range of math branches to improve your confidence and skills. We have math experts to guide you every step of the way.</p>
-                            <p class="width-40 main-button button-palm">Algebra</p>
-                            <p class="width-40 main-button button-palm">Basic Math</p>
-                            <p class="width-40 main-button button-palm">Geometry</p>
-                            <p class="width-40 main-button button-palm">Calculus</p>
-                            <p class="width-40 main-button button-palm">Trigonometry</p>
-                        </a>
-                    </div>
-                    <div class="products-card">
-                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 sub_heading_text">Science</h3>
-                            <p class="mbtm-8 content-font">Be a science whiz. Improve your grades with us! </p>
-                            <p class="width-40 main-button button-palm">Physics</p>
-                            <p class="width-40 main-button button-palm">Chemistry</p>
-                            <p class="width-40 main-button button-palm">Microbiology</p>
-                            <p class="width-40 main-button button-palm">Geology</p>
-                            <p class="width-40 main-button button-palm">Botany</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="display-flex mob-flex-dir-col space-apart">
-                    <div class="products-card">
-                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 sub_heading_text">English</h3>
-                            <p class="mbtm-8 content-font">If you lack confidence in your reading or writing skills or if you are above grade level and requires enrichment opportunities, we are here to help you.</p>
-                            <p class="width-40 main-button button-palm">Phonics</p>
-                            <p class="width-40 main-button button-palm">Vocabulary</p>
-                            <p class="width-40 main-button button-palm">Reading</p>
-                            <p class="width-40 main-button button-palm">Writing</p>
-                            <p class="width-40 main-button button-palm">Modern literature</p>
-                        </a>
-                    </div>
-                    <div class="products-card">
-                        <a href="" class="anchor-style display-flex hor-flex-center flex-dir-col vert-flex-center">
-                            <h3 class="align-center margin-0 sub_heading_text">AP</h3>
-                            <p class="mbtm-8 content-font">We can help you excel in advanced classes and increase your AP exam scores.</p>
-                            <p class="width-40 main-button button-palm">AP Psychology</p>
-                            <p class="width-40 main-button button-palm">AP Calculus</p>
-                            <p class="width-40 main-button button-palm">AP Physics</p>
-                            <p class="width-40 main-button button-palm">AP French</p>
-                            <p class="width-40 main-button button-palm">AP English Literature</p>
-                        </a>
-                    </div>
-                </div>
+            <div class="main-container" id="course-container">
             </div>
         </section>
     </main>
