--- a/learning/learning.html
+++ b/learning/learning.html
@@ -69,8 +69,8 @@
                 </ul>
                 <hr/>
                 <form name="comment-form">
-                    <input type="text" class="width-100 mbtm-3" placeholder="Enter your name" id="name" required/>
-                    <textarea class="width=100 mbtm-3" cols="48" rows="4" placeholder="Add your comment" id="comment" required></textarea>
+                    <input type="text" class="width-100 mbtm-3" placeholder="Enter your name" id="name"/>
+                    <textarea class="comment-box width=100 mbtm-3" placeholder="Add your comment" id="comment" required></textarea>
                     <button type="submit" class="main-button button-blue width-100" onclick=addComment(event)>Add comment</button>
                 </form>
             </div>
