fixed error on contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -32,7 +32,7 @@
     <!-- Header/Nav ends here -->
     <section class = "box-content m-top-2">
         <section class = "main-section">
-            <section class = "width-fifty section-banner">
+            <section class = "width-fifty section-banner mob-display-none">
                 <img src = "../contact/Images/contact_us.png">
             </section>
     
