--- a/teacher/teacher.html
+++ b/teacher/teacher.html
@@ -88,6 +88,8 @@
                             <p id = "stud-4-percent"> 80%</p>
                         </li>
                     </ul>
+                    <button onclick = "generateReportCard()" class = "myButton vertical-btn-center">Generate Report</button>
+
                 </section>
 
 
@@ -169,7 +171,6 @@
         </section>
 
     </section>
-    <button onclick = "generateReportCard()">Generate Report</button>
     <!-- Footer goes here -->
     <footer class="m-top-2">
         <section class="footer mob-sec-pad ">
