added success msg

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -30,7 +30,12 @@
         </div>
     </header>   
     <!-- Header/Nav ends here -->
+
+    <div id = "success" class = "successMsg container">
+
+    </div>
     <section class = "box-content m-top-2">
+
         <section class = "main-section">
             <section class = "width-fifty section-banner mob-display-none">
                 <img src = "../contact/Images/contact_us.png">
