responsiveness added to about

--- a/about/about.html
+++ b/about/about.html
@@ -41,7 +41,7 @@
             <section class="m-top-2 m-bottom-4">
                 <img src="../about/Images/tutor.jpg">
             </section>
-            <section class="width-fifty">
+            <section class="width-fifty mob-width-100">
                 <h2>Grow up Your Knowledge Curve</h2>
                 <p>
                     Bull-Ean is a leading curated platform for live online learning. Led by our flagship business,
@@ -56,7 +56,7 @@
 
 
 
-        <section class="goal-section">
+        <section class="goal-section mob-flex-dir-col-rev">
             <section>
                 <h1>Our Goal</h1>
                 <p>BULL-EAN partners with more than 200 leading universities and companies to bring flexible,
